--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>علی گرگه</title>
   </head>
   <body>
+    <h1> salam
   
     <img class="avatar" src="img.png.jpg" >
       <!-- Modal Button -->
